--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav class="nav_flex">
-            <img class="logo" src="https://www.udemy.com/staticx/udemy/images/v7/logo-udemy.svg" alt="" />
+            <img class="logo" src="/images/Udemy.svg" alt="" />
             <div class="tooltip">
                 Category
                 <span class="tooltiptext">
@@ -246,11 +246,11 @@
             </div>
             <p>Udemy Business</p>
             <p>Teach on Udemy</p>
-            <a href=""><i class="fa-regular fa-globe"></i></a>
+            <a href=""><img src="/images/svgexport-3.svg" alt=""></a>
             <div class="button_flex">
                 <button>Sign in</button>
                 <button>Sign out</button>
-                <a href=""><i class="fa fa-globe" aria-hidden="true"></i></a>
+                <a href=""><img src="/images/svgexport-4.svg" alt=""></a>
             </div>
         </nav>
     </header>
@@ -299,7 +299,6 @@
                                 <i class="fa fa-star checked" aria-hidden="true"></i>
                                 <i class="fa fa-star checked" aria-hidden="true"></i>
                                 <i class="fa fa-star-half-o checked" aria-hidden="true"></i>
-                                <span>(3948)</span>
                                 <p> &#8358 3200 <span> <s> &#8358 14900</s></span></p>
                                 <h6>Bestseller</h6>
                             </span>
