--- a/index.html
+++ b/index.html
@@ -529,29 +529,154 @@
             </div>
             </div>
         </section>
-        <section>
+        <section class="section-6">
             <h3>Featured topics by category</h3>
-            <div>
+            <div class="section-6-flex">
+            <div >
                 <h4>Development</h4>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
+                <a href="">Python</a>
+                <p>36,354,994 students</p>
+                <a href="">Web Development</a>
+                <p>11,415,615 students</p>
+                <a href="">Machine Learning</a>
+                <p>7,070,015 students</p>
+                <button>Explore more topic</button>
             </div>
             <div>
-                <h4></h4>
-
+                <h4>Bussiness</h4>
+                <a href="">Financial Analysis</a>
+                <p>1,195,282 students</p>
+                <a href="">SQL</a>
+                <p>5,977,561 students</p>
+                <a href="">PMP</a>
+                <p>1,733,398 students</p>
             </div>
-            <div></div>
-            <div></div>
+            <div>
+                <h4>IT and Software </h4>
+                <a href="">AWS Certification</a>
+                <p>6,078,244 students</p>
+                \
+                <a href="">Ethical Hacking</a>
+                <p>10,931,066 students</p>
 
-
-
+                <a href="">Cyber Security</a> 
+                <p>3,998,037 students</p>  
+            </div>
+            <div>
+                <h4>Design</h4>
+                <a href="">Photoshop</a>
+                <a href="">Graphic Design</a>
+                <a href="">Drawing</a>
+            </div>
+            </div>
         </section>
-        <section></section>
-        <section></section>
-        <section></section> -->
+        <section class="section-7">
+
+            <div class="section-7-image">
+                <img src="/images/instructor-1x-v3.jpg" alt="">
+            </div>
+            <div class="section-7-text">
+                <h2>Become an instructor</h2>
+                <p>Instructors from around the world teach millions of students on Udemy. We provide the tools and skills to teach what you love.
+                </p>
+                <button>Start teaching today</button>
+            </div>
+        </section>
+        <section class="section-8">
+            <h3>Trusted by over 13,400 great teams</h3>
+            <p>Leading companies use the same courses to help employees keep their skills fresh.</p>
+            <div class="section-8-flex">
+                <img src="/images/Nasdaq logo.svg" alt=""><img src="/images/volkswagen-dark.svg" alt=""><img src="/images/box-dark.svg" alt=""><img src="/images/netapp-dark.svg" alt=""><img src="/images/eventbrite-dark.svg" alt=""><img src="/images/tcs-dark.svg" alt="">
+            </div>
+        </section>
+
+        <section class="section-9">
+            <div class="section-9-text">
+                <img width= "200" src="/images/Udemy Business.svg" alt="">
+                <p>Get unlimited access to 19,000+ of Udemy’s top courses for your team. Learn and improve skills across business, tech, design, and more.</p>
+                <button>Get Udemy Business</button>
+            </div>
+            <div>
+                <img src="/images/second-lady-image.jpg" alt="">
+            </div>
+        </section>
+        <section class="section-10">
+            <div>
+                <img src="/images/transform-1x-v3.jpg" alt="">
+            </div>
+            <div class="section-10-text">
+                <h2>Transform your life through education</h2>
+                <p>Learners around the world are launching new careers, advancing in their fields, and enriching their lives.</p>
+                <button>Find out how</button>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="footer">
+        <div class="footer-div">
+        <div>
+            <p>Udemy Bussiness</p>
+            <p>Teach on Udemy</p>
+            <p>Get the app</p>
+            <p>About us</p>
+            <p>Contact us</p>
+
+        </div>
+        <div>
+            <p>Careers</p>
+            <p>Blog</p>
+            <p>Help and Support</p>
+            <p>Affliate</p>
+            <p>Investors</p>
+        </div>
+        <div>
+            <p>Terms</p>
+            <p>Priacy policy</p>
+            <p>Cookie settings</p>
+            <p>Sitemap</p>
+            <p>Accesibilty statement</p>
+        </div>
+        </div>
+        <div class="modal-container">
+            <div> <img src="/images/svgexport-21.svg" alt=""> </div>
+            <div class="modal-div">English
+            <div class="modal">
+                <h3>Choose a Language</h3>
+                <div class="ul-div">
+                <ul>
+                    <li id="english">English</li>
+                    <li>Deutsch</li>
+                    <li>Español</li>
+                    <li>Français</li>
+                    <li>Bahasa Indonesia</li>
+                    <li>Italiano</li>
+
+                </ul>
+                <ul>
+                    <li>日本語</li>
+                    <li>한국어</li>
+                    <li>Nederlands</li>
+                    <li>Polski</li>
+                    <li>Português</li>
+                    <li>Română</li>
+                </ul>
+                <ul>
+                  <li>Русский</li>
+                  <li>ภาษาไทย</li>
+                  <li>Türkçe</li>
+                  <li>中文(简体)</li>
+                  <li>中文(繁體)</li>
+                </ul>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <img class="logo" src="images/Udemy-1.svg" alt="">
+        <p>&copy; 2022 Udemy, Inc</p>
+    </div>
+</footer>
 </body>
 
 </html>
