--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
             <p>Teach on Udemy</p>
             <a href=""><img src="/images/svgexport-3.svg" alt=""></a>
             <div class="button_flex">
-                <button>Sign in</button>
-                <button>Sign out</button>
+                <button class="sign-in-button">Sign in</button>
+                <button class="sign-out-button">Sign out</button>
                 <a href=""><img src="/images/svgexport-4.svg" alt=""></a>
             </div>
         </nav>
