--- a/index.html
+++ b/index.html
@@ -266,8 +266,10 @@
 
         <!-- section two -->
         <section class="section_2">
+            <div class="section-2-text">
             <h2>A broad selection of courses</h2>
             <p>Choose from 213,000 online video courses with new additions published every month</p>
+            </div>
             <div class="section_2_heading">
                 <h4>python</h4>
                 <h4>Excel</h4>
